# qr-find-web

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml  publish-image.yml
src/: data.rs  main.rs  routes.rs
src/qr/: mod.rs
src/service/: manager.rs  mod.rs  qr.rs
web/templates/: confirm.hbs  confirm.html  done.hbs  index.hbs  index.html  print.hbs  template.hbs
web/templates/assets/: index.css
