[package]
name = "app"
version = "1.0.0"
edition = "2018"

[dependencies]
actix-http = "2"
actix-web = "3"
actix-files = "0.3"
handlebars = { version = "3.0.0", features = ["dir_source"] }
serde_json = "1.0"
validator = { version = "0.14.0", features = ["derive"] }
serde = "1.0.130"
env_logger = "0.8"
log = { version = "0.4.14", features = ["std"] }
uuid = { version = "0.8", features = ["v4"] }
regex = "1"
lazy_static = "1"
qrcodegen = "1.7.0"
