[package]
name = "app"
version = "1.0.0"
edition = "2018"

[dependencies]
actix-files = "0.3"
actix-http = "2"
actix-web = "3"
env_logger = "0.8"
handlebars = { version = "4.1.3", features = ["dir_source"] }
lazy_static = "1"
log = { version = "0.4.14", features = ["std"] }
nanoid = "0.4.0"
qrcodegen = "1.7.0"
regex = "1"
serde = "1.0.130"
serde_json = "1.0"
validator = { version = "0.14.0", features = ["derive"] }
